--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,3 @@
-
+spring.datasource.url=jdbc:mysql://172.17.0.1:3306/osworks?createDatabaseIfNotExist=true&serverTimezone=UTC
+spring.datasource.username=osworks
+spring.datasource.password=0sw0rks
